# FreeSpec

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Files  Makefile  Makefile.coq.local  README.md  _CoqProject  build-docs.sh  build.v  configure.sh  coq-freespec-core.opam  coq-freespec-exec.opam  coq-freespec-ffi.opam  dune-project  run-tests.sh  stack-resolver.sh  style.css
.github/workflows/: docker-action.yml
arch/: Bitfield.v  Makefile  _CoqProject
arch/Abstract/: Abstract.v  Cache.v  MemoryController.v
coq/: FreeSpec.Core.Component.html  FreeSpec.Core.ComponentFacts.html  FreeSpec.Core.Contract.html  FreeSpec.Core.Core.html  FreeSpec.Core.CoreFacts.html  FreeSpec.Core.Extraction.html  FreeSpec.Core.Hoare.html  FreeSpec.Core.HoareFacts.html  FreeSpec.Core.Impure.html  FreeSpec.Core.ImpureFacts.html  FreeSpec.Core.Init.html  FreeSpec.Core.Instrument.html  FreeSpec.Core.InstrumentFacts.html  FreeSpec.Core.Interface.html  FreeSpec.Core.Semantics.html  FreeSpec.Core.SemanticsFacts.html  FreeSpec.Core.Tactics.html  FreeSpec.Exec.Eval.html  FreeSpec.Exec.Exec.html  FreeSpec.FFI.FFI.html  FreeSpec.FFI.ML.html  FreeSpec.FFI.Refs.html  airlock.html  coqdoc.css  heap.html  index.html  smram.html  toc.html
core/: .gitignore  Makefile.local  _CoqProject  dune-project
core/examples/: Airlock.v  Files  Map.v  Row.v  Smram.v  airlock.v  smram.v
core/tests/: core_tactics.v  provide_notation.v
core/theories/: Abstract.v  Component.v  Compose.v  Concurrent.v  Core.v  Fail.v  Interface.v  MonadSemantics.v  Open.v  Program.v  Proxy.v  Refine.v  Row.v  Semantics.v  Specification.v  Tactics.v  TemporalLogic.v  Undefined.v  dune
core/theories/Core/: Component.v  Contract.v  Impure.v  Interface.v  Notations.v  Program.v  Semantics.v  Specs.v  Sync.v  Tactics.v  utils.v
core/theories/Specification/: Constant.v  Reference.v  Temporal.v  Undefined.v
core/theories/TemporalLogic/: Notations.v
docs/: .gitignore  core.scrbl  exec.scrbl  experiment.scrbl  footer.html  freespec.scrbl  header.html  index.html  macros.scrbl
docs/assets/: config.js  coqdoc.css  footer.html  header.html
docs/core/: composing.scrbl  specifying.scrbl  verifying.scrbl
docs/exec/: exec.scrbl  interfaces.scrbl
examples/: Airlock.v  Files  Map.v  Row.v  Smram.v  _CoqProject  airlock.v  combine.v  dune  echo.v  fibo.v  fiboN.v  heap.v  hello.v  loop.v  pipe.v  smram.v
exec/: META  Makefile.local  _CoqProject  dune  dune-project
exec/src/: console.ml  coqbool.ml  coqbool.mli  coqbyte.ml  coqbyte.mli  coqlist.ml  coqlist.mli  coqnum.ml  coqnum.mli  coqprod.ml  coqstr.ml  coqstr.mli  coqsum.mli  coqunit.ml  debug.ml  dune  eval.ml  exec.ml  exec_plugin.mlpack  extends.ml  extends.mli  freespec_exec.mlpack  g_exec.ml4  g_exec.mlg  g_freespec_exec.ml4  g_freespec_exec.mlg  interfaces.ml  interfaces.mli  query.ml  utils.ml
experiment/: _CoqProject  dune-project
extraction/: extraction.v
html/: index.html
ml/: Coqbool.html  Coqbyte.html  Coqi63.html  Coqlist.html  Coqprod.html  Coqsum.html  Coqunit.html  Extends.html  Heap.html  Interfaces.html  Refs.html  Resources.html  Store.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Coqbool.html  type_Coqbyte.html  type_Coqi63.html  type_Coqlist.html  type_Coqprod.html  type_Coqsum.html  type_Coqunit.html  type_Extends.html  type_Heap.html  type_Interfaces.html  type_Refs.html  type_Resources.html  type_Store.html
oracle/: Files  Oracle.v  _CoqProject
patches/: opam-builds.patch
poc/: App.v  CoqMain.v  Db.v  Files  Nonce.v  OAuth.v  UserDb.v  _CoqProject  extraction.v
run/: fsc  fsrun
specs/: Address.v  Bitfield.v  Hexa.v  Memory.v  SMRAMC.v  x86.v
src/: Abstract.v  Compose.v  Contract.v  Equiv.v  Interface.v  Interp.v  Program.v  Refine.v  TemporalLogic.v  Tuple.v
stdlib/: dune-project
stdlib/theories/: dune
stdlib/theories/Stdlib/: Args.v  Console.v  Env.v  Files.v  Raise.v
tests/: core_tactics.v  files.output  files.v  inspect.v  pipe.v  program_fixpoint.v  provide_notation.v
theories/: Abstract.v  Compose.v  Concurrent.v  Contract.v  Control.v  Equiv.v  Fail.v  Function.v  Interface.v  Interp.v  MonadInterp.v  MonadSemantics.v  OneOf.v  Open.v  Program.v  PropBool.v  Proxy.v  Refine.v  Row.v  Semantics.v  Specification.v  State.v  Tactics.v  TemporalLogic.v  Undefined.v  Utils.v  WEq.v
theories/FFI/: FFI.v  ML.v  dune  refs.ml  refs.mli
theories/Stdlib/: Args.v  Console.v  Env.v  Files.v  Raise.v  dune  env.ml  env.mli  files.ml  files.mli
(+201 files in other folders)
