opam-version: "2.0"
maintainer: "Thomas Letan <thomas.letan@ssi.gouv.fr"
version: "dev"

homepage: "https://github.com/ANSSI-FR/FreeSpec"
dev-repo: "git+https://github.com/ANSSI-FR/FreeSpec.git"
bug-reports: "https://github.com/ANSSI-FR/FreeSpec.git/issues"
doc: "https://ANSSI-FR.github.io/FreeSpec"
license: "GPLv3"

synopsis: "A framework for implementing and certifying impure computations in Coq"
description: """
FreeSpec is a framework for the Coq proof assistant which allows to
implement and specify impure computations. This is the core of the
framework: it provides the base definition, the reasoning theory and
tactics to automate the reasoning.
"""

build: [
  ["patch" "-p1 < patches/opam-builds.patch"]
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml"
  "dune" {>= "2.5"}
  "coq" {(>= "8.12" & < "8.13~") | (= "dev")}
  "coq-ext-lib" {>= "0.11.2"}
]

tags: [
  "keyword:effect"
  "keyword:freer"
  "keyword:program logic"
  "category:CS/Program Logic"
  "logpath:FreeSpec.Core"
]

authors: [
  "Thomas Letan"
  "Yann Régis-Gianas"
]

url {
  src: "git+https://github.com/ANSSI-FR/FreeSpec.git#master"
}
