(coq.theory
  (name FreeSpec)
  (package freespec-stdlib)
  (libraries freespec-stdlib.console
             freespec-stdlib.env
             freespec-stdlib.files)
  (modules Stdlib.Console
           Stdlib.Args
           Stdlib.Raise
           Stdlib.Files
           Stdlib.Env))

(include_subdirs qualified)