(library
  (name FreeSpecFFI)
  (public_name coq-freespec-ffi.lib))

(rule
  (target Refs.v)
  (action (run coqffi -finterface %{cmi:refs} -o %{target})))

(coq.theory
  (name FreeSpec.FFI)
  (package coq-freespec-ffi)
  (theories FreeSpec.Core)
  (libraries coq-freespec-ffi.lib)
  (flags -init-file build.v))