(library
  (name freespec_stdlib)
  (public_name coq-freespec-stdlib.lib)
  (libraries unix coq-base.lib))

(rule
  (target Env.v)
  (action (run coqffi -p coq-base -m FreeSpec %{cmi:env} -o %{target})))

(rule
  (target Files.v)
  (action (run coqffi -p coq-base -m FreeSpec %{cmi:files} -o %{target})))

(coq.theory
  (name FreeSpec.Stdlib)
  (modules Env Args Files Console Raise)
  (theories FreeSpec.Core)
  (package coq-freespec-stdlib))